<resources>
    <string name="app_name">EPL Clubs</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_about">About</string>

    <string name="placeholder_search">Search club name…</string>
    <string name="back_button">Back Button</string>
    <string name="add_to_favorite">Add to Favorites</string>
    <string name="remove_from_favorite">Remove from Favorites</string>

    <string name="mssg_empty_data_home">No result founds, Please check your filters</string>
    <string name="mssg_empty_data_favorite">No Favorite Club</string>

    <string name="author_name">Dinta Aditya Fauzi</string>
    <string name="author_email">dintaaditya27@gmail.com</string>

</resources>