...
                    },
                    modifier = Modifier
                        .align(Alignment.TopEnd)
                        .clip(CircleShape)
                        .size(32.dp)
                        .background(Color.White)
                        .testTag("favorite_button")
                ) {
                    Icon(
                        imageVector = if (isFavorite) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
                        contentDescription = if (isFavorite) stringResource(R.string.remove_from_favorite) else stringResource(R.string.add_to_favorite),
                        tint = if (isFavorite) Color.Red else Color.Black
                    )
...
